--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="button">
-        <button> <img src="youtube.png" alt="" width="14px" height="auto"> watch trailer</button>
+        <button> <i class="fa-brands fa-youtube"></i> watch trailer</button>
       </div>
 
     
