--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div class="poster">
       <div class="image-div">
         <img src="cartoon.jpg" alt="" width="200px">
+        <p id="left">6.2/10</p>
+        <p id="right">60%</p>
       </div>
       <div class="title tooltip">
         <h1>benji</h1>
