last modified dec 5

--- a/index.html
+++ b/index.html
@@ -125,35 +125,53 @@
   <div class="content-element">
     <div class="contact-list">
       <img src="human.jpg" alt="">
-      <p>MS. TAIF</p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
+      <p class="name">MS. TAIF</p>
+      <p class="para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
       <button class="contact-btn">Contact</button>
     </div>
     <div class="contact-list">
       <img src="cartoon.jpg" alt="">
-      <p>MR. MARWAN</p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
+      <p class="name">MR. MARWAN</p>
+      <p class="para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
       <button class="contact-btn">Contact</button>
     </div>
     <div class="contact-list">
       <img src="human.jpg" alt="">
-      <p>MS. WAFA</p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
+      <p class="name">MS. WAFA</p>
+      <p class="para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
       <button class="contact-btn">Contact</button>
     </div>
     <div class="contact-list">
       <img src="cartoon.jpg" alt="">
-      <p>MR. TAIM</p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
+      <p class="name">MR. TAIM</p>
+      <p class="para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
       <button class="contact-btn">Contact</button>
     </div>
     <div class="contact-list">
       <img src="human.jpg" alt="">
-      <p>MS. JHANA</p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
+      <p class="name">MS. JHANA</p>
+      <p class="para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
       <button class="contact-btn">Contact</button>
     </div>
   </div>
+</div>
+
+
+<!---------------------------footer------------->
+
+<div class="footer">
+  <div class="foot-para lorem">
+    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam in alias odio quod consectetur modi quasi velit et, exercitationem dignissimos! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat, nisi?</p>
+  </div>
+
+  <div class="contact-us lorem">
+    <button>Contact us</button>
+  </div>
+
+</div>
+
+<div class="copyrights">
+  <h6>all rights reserved- spiderweb</h6>
 </div>
 
 
