shakil vai fix the problem

--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Teko:wght@300;600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Teko:wght@300;600&display=swap"
+    rel="stylesheet">
   <title>Document</title>
 </head>
+
 <body>
   <header class="fixed">
     <a class="logo" href="#">spider-<span class="redweb">web</span></a>
-      <div class="navbar">
-        <ul>
-          <li><a class="active" href="#">home</a></li>
-          <li><a href="#">services</a></li>
-          <li><a href="#">branch</a></li>
-        </ul>
-      </div>
+    <div class="navbar">
+      <ul>
+        <li><a class="active" href="#">home</a></li>
+        <li><a href="#">services</a></li>
+        <li><a href="#">branch</a></li>
+      </ul>
+    </div>
 
-      <div class="btn">
-        <a href="#">contact</a>
-      </div>
+    <div class="btn">
+      <a href="#">contact</a>
+    </div>
 
   </header>
 
@@ -32,150 +37,140 @@
   <!-------form------->
 
 
-<div class="main-form">
-  <div class="conteiner">
-    <div class="header">
-      <h1>Creat an Account</h1>
-    </div>
-
-    <div class="form">
-      <div class="input-div">
-        <label for="name" class="label-name">Username</label>
-        <input type="text" class="input" placeholder="Username">
+  <div class="main-form">
+    <div class="conteiner">
+      <div class="header">
+        <h1>Creat an Account</h1>
       </div>
 
-      <div class="input-div">
-        <label for="password" class="label-name">Password</label>
-        <input type="password" class="input" placeholder="Password">
-      </div>
-
-      <div class="input-div">
-        <label for="email" class="label-name">Email</label>
-        <input type="email" class="input" placeholder="Email">
-      </div>
-
-      <div class="check">
-        <label for="Gender" class="label-name">Gender</label>
-        <select name="gender" id="check">
-          <option value="Select" id="select" selected disabled>Select</option>
-          <option value="Select">Male</option>
-          <option value="Select">Female</option>
-        </select>
-      </div>
-
-      <div class="button">
-        <input type="Submit" class="input-btn">
-      </div>
-      <div class="bottom">
-        <div id="bottom-left">
-          <input type="checkbox" class="checkbox-btn">
-          <label for="checkbox">Remember Me</label>
+      <div class="form">
+        <div class="input-div">
+          <label for="name" class="label-name">Username</label>
+          <input type="text" class="input" placeholder="Username">
         </div>
 
-        <div id="bottom-right">
-          <label for="forget-pass"><a href="#">Forget Password</a></label>
+        <div class="input-div">
+          <label for="password" class="label-name">Password</label>
+          <input type="password" class="input" placeholder="Password">
         </div>
-    </div>
 
-    </div>
+        <div class="input-div">
+          <label for="email" class="label-name">Email</label>
+          <input type="email" class="input" placeholder="Email">
+        </div>
 
-  </div>
-</div>
+        <div class="check">
+          <label for="Gender" class="label-name">Gender</label>
+          <select name="gender" id="check">
+            <option value="Select" id="select" selected disabled>Select</option>
+            <option value="Select">Male</option>
+            <option value="Select">Female</option>
+          </select>
+        </div>
 
+        <div class="button">
+          <input type="Submit" class="input-btn">
+        </div>
+        <div class="bottom">
+          <div id="bottom-left">
+            <input type="checkbox" class="checkbox-btn">
+            <label for="checkbox">Remember Me</label>
+          </div>
 
-<!------------------content 1---------------------->
+          <div id="bottom-right">
+            <label for="forget-pass"><a href="#">Forget Password</a></label>
+          </div>
+        </div>
 
+      </div>
 
-<div class="content-cover">
-  <div class="title">
-    <h1>Our Services</h1>
-  </div>
-  
-  <div class="content-div">
-
-    <div class="cover1 cover">
-      <h3>Facebook marketing</h3>
-      <img src="facebook marketing.jpg" alt="" width="150px">
-      <p class="middel">Facebook</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, quae!</p>
-    </div>
-
-    <div class="cover2 cover">
-      <h3>Youtube marketing</h3>
-      <img src="youtube marketing.jpg" alt="" width="150px">
-      <p>tur adipisicin quae! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, adipisci. Libero nostrum rem aspernatur laboriosam.</p>
-    </div>
-
-    <div class="cover3 cover">
-      <h3>Instagram marketing</h3>
-      <img src="instagram marketing.jpg" alt="" width="150px">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, quae!</p>
-    </div>
-
-  </div>
-</div>
-
-
-<!---------------------content2---------------------->
-
-
-<div class="content2">
-
-  <h2>Our Stuffs</h2>
-  <div class="content-element">
-    <div class="contact-list">
-      <img src="human.jpg" alt="">
-      <p class="name">MS. TAIF</p>
-      <p class="para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
-      <button class="contact-btn">Contact</button>
-    </div>
-    <div class="contact-list">
-      <img src="cartoon.jpg" alt="">
-      <p class="name">MR. MARWAN</p>
-      <p class="para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
-      <button class="contact-btn">Contact</button>
-    </div>
-    <div class="contact-list">
-      <img src="human.jpg" alt="">
-      <p class="name">MS. WAFA</p>
-      <p class="para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
-      <button class="contact-btn">Contact</button>
-    </div>
-    <div class="contact-list">
-      <img src="cartoon.jpg" alt="">
-      <p class="name">MR. TAIM</p>
-      <p class="para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
-      <button class="contact-btn">Contact</button>
-    </div>
-    <div class="contact-list">
-      <img src="human.jpg" alt="">
-      <p class="name">MS. JHANA</p>
-      <p class="para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
-      <button class="contact-btn">Contact</button>
     </div>
   </div>
-</div>
 
 
-<!---------------------------footer------------->
+  <!------------------content 1---------------------->
 
-<div class="footer">
-  <div class="foot-para lorem">
-    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam in alias odio quod consectetur modi quasi velit et, exercitationem dignissimos! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat, nisi?</p>
+
+  <div class="content-cover">
+    <div class="title">
+      <h1>Our Services</h1>
+    </div>
+
+    <div class="content-div">
+
+      <div class="cover1 cover">
+        <h3>Facebook marketing</h3>
+        <div class="position">
+          <img src="facebook marketing.jpg" alt="">
+          <p class="middel">Facebook</p>
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, quae!</p>
+      </div>
+
+      <div class="cover2 cover">
+        <h3>Youtube marketing</h3>
+        <div class="position"><img src="youtube marketing.jpg" alt="">
+          <p class="middel">Youtube</p>
+        </div>
+        <p>tur adipisicin quae! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, adipisci. Libero nostrum
+          rem aspernatur laboriosam.</p>
+      </div>
+
+      <div class="cover3 cover">
+        <h3>Instagram marketing</h3>
+        <div class="position"><img src="instagram marketing.jpg" alt="">
+          <p class="middel">Instagram</p>
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, quae!</p>
+      </div>
+
+    </div>
   </div>
 
-  <div class="contact-us lorem">
-    <button>Contact us</button>
+
+  <!---------------------content2---------------------->
+
+
+  <div class="content2">
+
+    <h2>Our Stuffs</h2>
+    <div class="content-element">
+      <div class="contact-list">
+        <img src="human.jpg" alt="">
+        <p>MS. TAIF</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
+        <button class="contact-btn">Contact</button>
+      </div>
+      <div class="contact-list">
+        <img src="cartoon.jpg" alt="">
+        <p>MR. MARWAN</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
+        <button class="contact-btn">Contact</button>
+      </div>
+      <div class="contact-list">
+        <img src="human.jpg" alt="">
+        <p>MS. WAFA</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
+        <button class="contact-btn">Contact</button>
+      </div>
+      <div class="contact-list">
+        <img src="cartoon.jpg" alt="">
+        <p>MR. TAIM</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
+        <button class="contact-btn">Contact</button>
+      </div>
+      <div class="contact-list">
+        <img src="human.jpg" alt="">
+        <p>MS. JHANA</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
+        <button class="contact-btn">Contact</button>
+      </div>
+    </div>
   </div>
-
-</div>
-
-<div class="copyrights">
-  <h6>all rights reserved- spiderweb</h6>
-</div>
 
 
 
 
 </body>
+
 </html>
