--- a/index.html
+++ b/index.html
@@ -138,32 +138,32 @@
       <div class="contact-list">
         <img src="human.jpg" alt="">
         <p>MS. TAIF</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
-        <button class="contact-btn">Contact</button>
+        <p  class="des">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
+        <div class="contact-btn"><button>Contact</button></div>
       </div>
       <div class="contact-list">
-        <img src="cartoon.jpg" alt="">
+        <img src="human.jpg" alt="">
         <p>MR. MARWAN</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
-        <button class="contact-btn">Contact</button>
+        <p class="des">Lorem, ipsum snjkf kkfjhjskhhf sjfhsjhf sjfhsjhf dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
+        <div class="contact-btn"><button>Contact</button></div>
       </div>
       <div class="contact-list">
         <img src="human.jpg" alt="">
         <p>MS. WAFA</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
-        <button class="contact-btn">Contact</button>
+        <p  class="des">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
+        <div class="contact-btn"><button>Contact</button></div>
       </div>
       <div class="contact-list">
-        <img src="cartoon.jpg" alt="">
+        <img src="human.jpg" alt="">
         <p>MR. TAIM</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
-        <button class="contact-btn">Contact</button>
+        <p  class="des">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
+        <div class="contact-btn"><button>Contact</button></div>
       </div>
       <div class="contact-list">
         <img src="human.jpg" alt="">
         <p>MS. JHANA</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
-        <button class="contact-btn">Contact</button>
+        <p  class="des">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
+        <div class="contact-btn"><button>Contact</button></div>
       </div>
     </div>
   </div>
