--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </div>
       <div class="contact-list">
         <img src="human.jpg" alt="">
-        <p>MR. MARWAN</p>
+        <p class="marwan">MR. MARWAN</p>
         <p class="des">Lorem, ipsum snjkf kkfjhjskhhf sjfhsjhf sjfhsjhf dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
         <div class="contact-btn"><button>Contact</button></div>
       </div>
