adding second page

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
   </header>
 
-
-  <!-------form------->
+ 
+  <!-- -----form----- -->
 
 
   <div class="main-form">
@@ -101,7 +101,7 @@
       <div class="cover1 cover">
         <h3>Facebook marketing</h3>
         <div class="position">
-          <img src="facebook marketing.jpg" alt="">
+          <img src="facebook marketing.png" alt="">
           <p class="middel">Facebook</p>
         </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, quae!</p>
@@ -109,7 +109,7 @@
 
       <div class="cover2 cover">
         <h3>Youtube marketing</h3>
-        <div class="position"><img src="youtube marketing.jpg" alt="">
+        <div class="position"><img src="youtube marketing.png" alt="">
           <p class="middel">Youtube</p>
         </div>
         <p>tur adipisicin quae! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, adipisci. Libero nostrum
@@ -118,7 +118,7 @@
 
       <div class="cover3 cover">
         <h3>Instagram marketing</h3>
-        <div class="position"><img src="instagram marketing.jpg" alt="">
+        <div class="position"><img src="instagram marketing.png" alt="">
           <p class="middel">Instagram</p>
         </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, quae!</p>
@@ -145,7 +145,7 @@
         <img src="human.jpg" alt="">
         <p class="marwan">MR. MARWAN</p>
         <p class="des">Lorem, ipsum snjkf kkfjhjskhhf sjfhsjhf sjfhsjhf dolor sit amet consectetur adipisicing elit. Provident, nihil.</p>
-        <div class="contact-btn"><button>Contact</button></div>
+        <div class="contact-btn"><button><a href="third project/index.html" target="_blank">contact</a></button></div>
       </div>
       <div class="contact-list">
         <img src="human.jpg" alt="">
